force-app/main/default/objects/Legend_Transfer_Item__c/fields/Legend_Transfer_Request__c.field-meta.xml
<CustomField>
    <fullName>Legend_Transfer_Request__c</fullName>
    <label>Legend Transfer Request</label>
    <referenceTo>Legend_Transfer_Request__c</referenceTo>
    <relationshipLabel>Legend Transfer Items</relationshipLabel>
    <relationshipName>Legend_Transfer_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>