force-app/main/default/objects/Legend_Transfer_Item__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Legend Transfer Items (Parent Product)</relationshipLabel>
    <relationshipName>Legend_Transfer_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>