force-app/main/default/objects/Legend_Transfer_Item__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serial Number</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Legend Transfer Items</relationshipLabel>
    <relationshipName>Legend_Transfer_Items</relationshipName>
    <type>Lookup</type>
</CustomField>